--- a/env/.env
+++ b/env/.env
@@ -13,3 +13,14 @@
 # SERVER_URL=*                       # 全オリジン許可（テスト用のみ、セキュリティリスクあり）
 
 # SERVER_URL=http://localhost
+
+# Slack連携設定（オプション）
+# ガチャ結果をSlackに共有する機能で使用
+# 例:
+# SLACK_WEBHOOK_URL=http://hoge.slack.com/api/chat.postMessage
+# SLACK_DEFAULT_CHANNEL=#tmp-hirsakam-icon-generator
+# SLACK_BOT_ICON_URL=https://example.com/hirsakam_bot_icon.png
+
+# SLACK_WEBHOOK_URL=
+# SLACK_DEFAULT_CHANNEL=#tmp-hirsakam-icon-generator
+# SLACK_BOT_ICON_URL=
