--- a/env/.env
+++ b/env/.env
@@ -13,3 +13,20 @@
 # SERVER_URL=*                       # 全オリジン許可（テスト用のみ、セキュリティリスクあり）
 
 # SERVER_URL=http://localhost
+
+# Slack連携設定（オプション）
+# ガチャ結果をSlackに共有する機能で使用
+# 
+# 設定方法:
+# 1. SlackのApp管理画面でWebhook URLを取得
+# 2. 以下の形式で設定（コメントアウトを解除）
+# 
+# 例:
+# SLACK_WEBHOOK_URL=https://your-workspace.slack.com/api/chat.postMessage
+# SLACK_DEFAULT_CHANNEL=#tmp-hirsakam-icon-generator
+# SLACK_BOT_ICON_URL=https://raw.githubusercontent.com/your-repo/hirsakam-icon.png
+#
+# 実際の設定（使用する場合はコメントアウトを解除）:
+# SLACK_WEBHOOK_URL=
+# SLACK_DEFAULT_CHANNEL=#tmp-hirsakam-icon-generator  
+# SLACK_BOT_ICON_URL=
