--- a/env/.env
+++ b/env/.env
@@ -20,7 +20,7 @@
 # 2. 以下の形式で設定（コメントアウトを解除）
 # 
 # 例:
-# SLACK_WEBHOOK_URL=https://your-workspace.slack.com/api/chat.postMessage
+# SLACK_WEBHOOK_URL=https://your-workspace.slack.com/api/files.upload
 # SLACK_DEFAULT_CHANNEL=#tmp-hirsakam-icon-generator
 # SLACK_BOT_ICON_URL=https://raw.githubusercontent.com/your-repo/hirsakam-icon.png
 #
