--- a/env/.env
+++ b/env/.env
@@ -16,15 +16,20 @@
 
 # Slack連携設定（オプション）
 # ガチャ結果をSlackに共有する機能で使用
-# 1. SlackのApp管理画面でWebhook URLを取得
-# 2. 以下の形式で設定（コメントアウトを解除）
-# 
+#
+# セットアップ手順:
+# 1. Slack App管理画面 (https://api.slack.com/apps) でアプリを作成
+# 2. OAuth & Permissions で以下のBot Token Scopesを追加:
+#    - files:write (ファイルアップロード権限)
+#    - chat:write (メッセージ送信権限)
+# 3. "Install to Workspace" でアプリをインストール
+# 4. "Bot User OAuth Token" (xoxb-で始まるトークン) をコピー
+# 5. 以下のSLACK_BOT_TOKENに設定（コメントアウトを解除）
+#
 # 例:
-# SLACK_WEBHOOK_URL=https://your-workspace.slack.com/api/files.upload
+# SLACK_BOT_TOKEN=xoxb-your-bot-token-here
 # SLACK_DEFAULT_CHANNEL=#tmp-hirsakam-icon-generator
-# SLACK_BOT_ICON_URL=https://raw.githubusercontent.com/your-repo/hirsakam-icon.png
 #
 # 実際の設定（使用する場合はコメントアウトを解除）:
-# SLACK_WEBHOOK_URL=
-# SLACK_DEFAULT_CHANNEL=#tmp-hirsakam-icon-generator  
-# SLACK_BOT_ICON_URL=
+# SLACK_BOT_TOKEN=
+# SLACK_DEFAULT_CHANNEL=#tmp-hirsakam-icon-generator
